--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-analytics": "^0.2.0",
+    "gatsby-plugin-google-analytics": "^2.3.17",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.31",
     "gatsby-plugin-react-helmet": "^3.3.13",
