--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-source-contentful": "^2.3.50",
     "gatsby-source-filesystem": "^2.3.33",
+    "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.17",
+    "prismjs": "^1.22.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
