--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-analytics": "^0.2.0",
+    "gatsby-plugin-env-variables": "^2.0.0",
     "gatsby-plugin-google-analytics": "^2.3.17",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.31",
@@ -36,7 +37,7 @@
     "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.17",
     "prismjs": "^1.22.0",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
